Adding semantic tags Adding alert level and code refined.
Signed-off-by: Gaël L'hopital <gael@lhopital.org>