@@ -14,10 +14,7 @@ package org.openhab.binding.airquality.internal;
 
 import static org.openhab.core.library.unit.MetricPrefix.HECTO;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import javax.measure.Unit;
 import javax.measure.quantity.Dimensionless;
@@ -25,11 +22,9 @@ import javax.measure.quantity.Pressure;
 import javax.measure.quantity.Temperature;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.openhab.core.library.types.StringType;
 import org.openhab.core.library.unit.SIUnits;
 import org.openhab.core.library.unit.Units;
 import org.openhab.core.thing.ThingTypeUID;
-import org.openhab.core.types.State;
 
 /**
  * The {@link AirQualityBinding} class defines common constants, which are
@@ -41,13 +36,19 @@ import org.openhab.core.types.State;
 @NonNullByDefault
 public class AirQualityBindingConstants {
 
-    public static final String BINDING_ID = "airquality";
+    private static final String BINDING_ID = "airquality";
     public static final String LOCAL = "local";
 
     // List of all Thing Type UIDs
     public static final ThingTypeUID THING_TYPE_AQI = new ThingTypeUID(BINDING_ID, "aqi");
 
+    // List of thing properties
+    public static final String ATTRIBUTIONS = "Attributions";
+    public static final String CITY = "City";
+    public static final String DISTANCE = "Distance";
+
     // List of all Channel id's
+    public static final String ALERT = "alert";
     public static final String AQI = "aqiLevel";
     public static final String AQI_COLOR = "aqiColor";
     public static final String AQIDESCRIPTION = "aqiDescription";
@@ -57,26 +58,14 @@ public class AirQualityBindingConstants {
     public static final String NO2 = "no2";
     public static final String CO = "co";
     public static final String SO2 = "so2";
-    public static final String LOCATIONNAME = "locationName";
-    public static final String STATIONLOCATION = "stationLocation";
-    public static final String STATIONID = "stationId";
     public static final String OBSERVATIONTIME = "observationTime";
     public static final String TEMPERATURE = "temperature";
     public static final String PRESSURE = "pressure";
     public static final String HUMIDITY = "humidity";
     public static final String DOMINENTPOL = "dominentpol";
 
-    public static final State GOOD = new StringType("GOOD");
-    public static final State MODERATE = new StringType("MODERATE");
-    public static final State UNHEALTHY_FOR_SENSITIVE = new StringType("UNHEALTHY_FOR_SENSITIVE");
-    public static final State UNHEALTHY = new StringType("UNHEALTHY");
-    public static final State VERY_UNHEALTHY = new StringType("VERY_UNHEALTHY");
-    public static final State HAZARDOUS = new StringType("HAZARDOUS");
-
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_AQI);
-    public static final Set<String> SUPPORTED_CHANNEL_IDS = Stream.of(AQI, AQIDESCRIPTION, PM25, PM10, O3, NO2, CO, SO2,
-            LOCATIONNAME, STATIONLOCATION, STATIONID, OBSERVATIONTIME, TEMPERATURE, PRESSURE, HUMIDITY)
-            .collect(Collectors.toSet());
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_AQI);
+    public static final Set<String> POLLUTOR_CHANNEL_IDS = Set.of(PM25, PM10, O3, NO2, SO2, CO);
 
     // Units of measurement of the data delivered by the API
     public static final Unit<Temperature> API_TEMPERATURE_UNIT = SIUnits.CELSIUS;
